# slashbot

./: LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: tests.yml
examples/hello_world/: hello_world.py  serverless.yml
src/: slashbot.py
tests/: test_handler.py  test_router.py
