[metadata]
name = slashbot
version = 0.0.2
author = Eric Brassell
author_email = ebrassell-slashbot@gmail.com
description = A library for creating Slack slash commands.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ebrassell/slashbot
project_urls =
    Bug Tracker = https://github.com/ebrassell/slashbot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
